[package]
name = "SysWatch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
sysinfo = "0.30" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
image = "0.24"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true              
codegen-units = 1       
opt-level = "z"         
strip = true            
panic = "abort"